[project]
name = "manager-dotfiles"
version = "0.2.0"
description = "dotfiles manager for link/copy files, and run backup/refresh scripts"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    {"name" = "rgermain", "email" = "contact@germainremi.fr"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
urls = { "projects" = "https://github.com/remigermain/manager-dotfiles" }

dependencies = [
    "jinja2>=3.1.6",
]

[project.scripts]
dotfiles-manager = "dotfiles_manager:cli"
dm = "dotfiles_manager:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv]
package = true
